--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
-<HTML>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0,shrink-to-fit=no" />
 	<head>
-	<link rel="icon" href="C:\Users\vpaz1\Documents\IPRO_497-242\RMC_Webpage\favicon.ico">
   <link rel="stylesheet" href="StyleSheet.css">
 	</head>
-	<HEADER>
-	<TITLE>IIT NASA RMC</TITLE>
-	</HEADER>
-	<BODY>
+	<body>
 	<!-- Adds the image for the "iit nasa rmc" banner -->
       <img id="banner" src="images/Title_Banner.png">
 	<!-- Table for the menu that links to various pages of the site-->
-	    <ul id="navigation-bar">
-  			<li><a href="ContactUs.html">Contact us</a></li>
-	  		<li><a href="partnership.html">Partnerships</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="MemberPage.html">Members</a></li>
-				<li><a href="index.html">Home</a></li>
+		<nav id=navigation>
+	    <ul class="nav">
+  			<li class="navButtons" >Home</li>
+	  		<li class="navButtons">Members</li>
+				<li class="navButtons">Gallery</li>
+				<li class="navButtons">Contact us</li>
      </ul>
+	 </nav>
 		 <article>
 	       <h2>About Us</h2>
 		       <p class="centered"> We are the Scarlett Spacehawks.</br>
@@ -27,7 +25,7 @@
 						our mission is to actively reach out to the youth,
 		        and inspire the minds of our future STEM leaders and innovators.</p>
     <img id="singleImage" src="images/team1.JPG">
-	</article>
+	  </article>
 		<div class="grid-robot">
 <!--...............................Lofty......................................-->
     	<div class="grid-robot-items">
@@ -54,8 +52,6 @@
 	 		</div>
 
 		</div>
+ </body>
 
-	</center>
-	</BODY>
-
-</HTML>
+</html>
