added a contact us page and linked it to the navigation bar. Also created a main.js file where i will implement any javascript.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0,shrink-to-fit=no" />
 	<head>
   <link rel="stylesheet" href="StyleSheet.css">
+	<script src="js/main.js">
+  </script>
 	</head>
 	<body>
 	<!-- Adds the image for the "iit nasa rmc" banner -->
@@ -10,10 +12,8 @@
 	<!-- Table for the menu that links to various pages of the site-->
 		<nav id=navigation>
 	    <ul class="nav">
-  			<li class="navButtons" >Home</li>
-	  		<li class="navButtons">Members</li>
-				<li class="navButtons">Gallery</li>
-				<li class="navButtons">Contact us</li>
+				<li class="navButtons"><a href= "index.html">Home</a></li>
+				<li class="navButtons"><a href="contact.html">Contact us</a></li>
      </ul>
 	 </nav>
 		 <article>
