--- a/contact.html
+++ b/contact.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0,shrink-to-fit=no" />
-	<head>
+  <head>
+  <meta charset="utf-8" />
   <link rel="stylesheet" href="StyleSheet.css">
-	<script src="js/main.js">
-  </script>
-	</head>
+  </head>
 	<body>
 	<!-- Adds the image for the "iit nasa rmc" banner -->
     <img id="banner" src="images/Title_Banner.png">
 	<!-- Table for the menu that links to various pages of the site-->
-		<nav id=navigation>
+
 	    <ul class="nav">
   			<li class="navButtons"><a href= "index.html">Home</a></li>
 				<li class="navButtons"><a href="contact.html">Contact us</a></li>
      </ul>
-	 </nav>
+	 
+   <article>
+   <h2>Contact Us</h2>
+   <h2>Email:<a href="spacehawks@iit.edu">spacehawks@iit.edu</a>
+   </h2>
+   <ul class="contact-reasons">
+     <li class="reasons">Company Partnerships</li>
+     <li class="reasons">New Members</li>
+     <li class="reasons">Community Outreach</li>
+   </ul>
+   <script src="main.js"></script>
 
-<!--................................Dora......................................-->
-			<div class="grid-robot-items">
-				<h2 id="robot-header">"Dora" 2018</h2>
-				<p id="robot-paragraphs">
-					Dora competed on May 2018. She is
-					still in the works and will undergoe many upgrades.
-					She's expected to compete again
-					this coming Competition on May 2019.
-				</p>
-				<img id="singleImage" src="images/comp13.JPG" width="600px" height="350px">
-	 		</div>
+	 <img id="singleImage" src="images/Sponsors_1.png" width="700px" height="350px">
+    </article>
  </body>
 
 </html>
