--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0,shrink-to-fit=no" />
 	<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0,shrink-to-fit=no" />
+	<meta charset="utf-8" />
   <link rel="stylesheet" href="StyleSheet.css">
-	<script src="js/main.js">
-  </script>
 	</head>
 	<body>
 	<!-- Adds the image for the "iit nasa rmc" banner -->
